--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "html-webpack-plugin": "^5.5.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
